Added trackingid and model errors for validation action filter

--- a/Odin/Web.config
+++ b/Odin/Web.config
@@ -36,23 +36,25 @@
     <rewrite>
       <rules>
         <rule name="Redirect to https">
-          <match url="(.*)"/>
+          <match url="(.*)" />
           <conditions>
-            <add input="{HTTPS}" pattern="Off"/>
+            <add input="{HTTPS}" pattern="Off" />
           </conditions>
-          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}"/>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" />
         </rule>
       </rules>
     </rewrite>
     <httpErrors errorMode="Custom" existingResponse="Replace">
-      <clear/>
+      <clear />
       <error statusCode="403" subStatusCode="14" responseMode="ExecuteURL" path="/Error" />
-      <error statusCode="404" path="/Error/Error404" responseMode="ExecuteURL"/>
-      <error statusCode="500" path="/Error" responseMode="ExecuteURL"/>
+      <error statusCode="404" path="/Error/Error404" responseMode="ExecuteURL" />
+      <error statusCode="500" path="/Error" responseMode="ExecuteURL" />
     </httpErrors>
     
     <modules>
       <remove name="FormsAuthentication" />
+      <remove name="TelemetryCorrelationHttpModule" />
+      <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
