--- a/Odin.ToSeWebJob/packages.config
+++ b/Odin.ToSeWebJob/packages.config
@@ -6,15 +6,16 @@
   <package id="EnterpriseLibrary.Data" version="6.0.1304.0" targetFramework="net461" />
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.4.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.4.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.4.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.4.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.5.1" targetFramework="net461" />
@@ -37,6 +38,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net461" />
   <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net461" />
   <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net461" />
   <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net461" />
   <package id="System.Net.Requests" version="4.0.11" targetFramework="net461" />
