Started fixing styling.

--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -430,29 +430,52 @@
       <DependentUpon>bootstrap-datetimepicker.css</DependentUpon>
     </Content>
     <Content Include="Content\styles\css\bootstrap-paper.css" />
-    <Content Include="Content\styles\css\ref_bookmarklet.css" />
-    <Content Include="Content\styles\css\ref_bookmarklet.min.css">
-      <DependentUpon>ref_bookmarklet.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\css\ref_forgotpassword.css" />
-    <Content Include="Content\styles\css\ref_forgotpassword.min.css">
-      <DependentUpon>ref_forgotpassword.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\css\ref_login.css" />
-    <Content Include="Content\styles\css\ref_orders.css" />
-    <Content Include="Content\styles\css\ref_orders.min.css">
-      <DependentUpon>ref_orders.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\bookmarklet.css">
-      <DependentUpon>ref_bookmarklet.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\bookmarklet.min.css">
+    <Content Include="Content\styles\css\refactor\bookmarklet.css" />
+    <Content Include="Content\styles\css\refactor\bookmarklet.min.css">
       <DependentUpon>bookmarklet.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\help.css">
-      <DependentUpon>ref_help.scss</DependentUpon>
+    <Content Include="Content\styles\css\refactor\forgotpassword.css" />
+    <Content Include="Content\styles\css\refactor\forgotpassword.min.css">
+      <DependentUpon>forgotpassword.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\help.min.css">
+    <Content Include="Content\styles\css\refactor\help.css" />
+    <Content Include="Content\styles\css\refactor\help.min.css">
+      <DependentUpon>help.css</DependentUpon>
+    </Content>
+    <Content Include="Content\styles\css\refactor\itineraryPdf.css" />
+    <Content Include="Content\styles\css\refactor\itineraryPdf.min.css">
+      <DependentUpon>itineraryPdf.css</DependentUpon>
+    </Content>
+    <Content Include="Content\styles\css\refactor\login.css" />
+    <Content Include="Content\styles\css\refactor\login.min.css">
+      <DependentUpon>login.css</DependentUpon>
+    </Content>
+    <Content Include="Content\styles\css\refactor\orders.css" />
+    <Content Include="Content\styles\css\refactor\orders.min.css">
+      <DependentUpon>orders.css</DependentUpon>
+    </Content>
+    <Content Include="Content\styles\css\refactor\selectedProperty.css" />
+    <Content Include="Content\styles\css\refactor\selectedProperty.min.css">
+      <DependentUpon>selectedProperty.css</DependentUpon>
+    </Content>
+    <Content Include="Content\styles\css\refactor\transferee.css" />
+    <Content Include="Content\styles\css\refactor\transferee.min.css">
+      <DependentUpon>transferee.css</DependentUpon>
+    </Content>
+    <Content Include="Content\styles\css\refactor\transferee\HFPropertiesPDF.css" />
+    <Content Include="Content\styles\css\refactor\transferee\HFPropertiesPDF.min.css">
+      <DependentUpon>HFPropertiesPDF.css</DependentUpon>
+    </Content>
+    <Content Include="Content\styles\scss\refactor\bookmarklet.css">
+      <DependentUpon>bookmarklet.scss</DependentUpon>
+    </Content>
+    <Content Include="Content\styles\scss\refactor\bookmarklet.min.css">
+      <DependentUpon>bookmarklet.css</DependentUpon>
+    </Content>
+    <Content Include="Content\styles\scss\refactor\help.css">
+      <DependentUpon>help.scss</DependentUpon>
+    </Content>
+    <Content Include="Content\styles\scss\refactor\help.min.css">
       <DependentUpon>help.css</DependentUpon>
     </Content>
     <Content Include="Content\DataTables\css\autoFill.bootstrap.css" />
@@ -612,10 +635,10 @@
     <Content Include="Content\DataTables\images\sort_desc.png" />
     <Content Include="Content\DataTables\images\sort_desc_disabled.png" />
     <Content Include="Content\DataTables\swf\flashExport.swf" />
-    <Content Include="Content\styles\scss\forgotpassword.css">
-      <DependentUpon>ref_forgotpassword.scss</DependentUpon>
+    <Content Include="Content\styles\scss\refactor\forgotpassword.css">
+      <DependentUpon>forgotpassword.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\forgotpassword.min.css">
+    <Content Include="Content\styles\scss\refactor\forgotpassword.min.css">
       <DependentUpon>forgotpassword.css</DependentUpon>
     </Content>
     <Content Include="Content\Images\bg_gradient_forgot_password.png" />
@@ -683,96 +706,88 @@
     <Content Include="Content\Images\task_done.png" />
     <Content Include="Content\Images\task_notDone.png" />
     <Content Include="Content\Images\user-placeholder.png" />
-    <Content Include="Content\styles\scss\login.css">
-      <DependentUpon>ref_login.scss</DependentUpon>
+    <Content Include="Content\styles\scss\refactor\login.css">
+      <DependentUpon>login.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\login.min.css">
+    <Content Include="Content\styles\scss\refactor\login.min.css">
       <DependentUpon>login.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\orders.css">
-      <DependentUpon>ref_orders.scss</DependentUpon>
+    <Content Include="Content\styles\scss\refactor\orders.css">
+      <DependentUpon>orders.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\orders.min.css">
+    <Content Include="Content\styles\scss\refactor\orders.min.css">
       <DependentUpon>orders.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\css\ref_itineraryPdf.css" />
-    <Content Include="Content\styles\css\ref_itineraryPdf.min.css">
-      <DependentUpon>ref_itineraryPdf.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\css\ref_transferee.css" />
-    <Content Include="Content\styles\css\ref_transferee.min.css">
-      <DependentUpon>ref_transferee.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\ref_transferee\dashboard.css">
+    <Content Include="Content\styles\scss\refactor\transferee\dashboard.css">
       <DependentUpon>dashboard.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\dashboard.min.css">
+    <Content Include="Content\styles\scss\refactor\transferee\dashboard.min.css">
       <DependentUpon>dashboard.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\details.css">
+    <Content Include="Content\styles\scss\refactor\transferee\details.css">
       <DependentUpon>details.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\details.min.css">
+    <Content Include="Content\styles\scss\refactor\transferee\details.min.css">
       <DependentUpon>details.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\help.css">
+    <Content Include="Content\styles\scss\refactor\transferee\help.css">
       <DependentUpon>help.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\help.min.css">
+    <Content Include="Content\styles\scss\refactor\transferee\help.min.css">
       <DependentUpon>help.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\history.css">
+    <Content Include="Content\styles\scss\refactor\transferee\history.css">
       <DependentUpon>history.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\history.min.css">
+    <Content Include="Content\styles\scss\refactor\transferee\history.min.css">
       <DependentUpon>history.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\housing.css">
+    <Content Include="Content\styles\scss\refactor\transferee\housing.css">
       <DependentUpon>housing.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\housing.min.css">
+    <Content Include="Content\styles\scss\refactor\transferee\housing.min.css">
       <DependentUpon>housing.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\intake.css">
+    <Content Include="Content\styles\scss\refactor\transferee\intake.css">
       <DependentUpon>intake.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\intake.min.css">
+    <Content Include="Content\styles\scss\refactor\transferee\intake.min.css">
       <DependentUpon>intake.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\itinerary.css">
+    <Content Include="Content\styles\scss\refactor\transferee\itinerary.css">
       <DependentUpon>itinerary.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\itinerary.min.css">
+    <Content Include="Content\styles\scss\refactor\transferee\itinerary.min.css">
       <DependentUpon>itinerary.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\itineraryPdf.css">
-      <DependentUpon>ref_itineraryPdf.scss</DependentUpon>
+    <Content Include="Content\styles\scss\refactor\itineraryPdf.css">
+      <DependentUpon>itineraryPdf.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\itineraryPdf.min.css">
+    <Content Include="Content\styles\scss\refactor\itineraryPdf.min.css">
       <DependentUpon>itineraryPdf.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\messages.css">
+    <Content Include="Content\styles\scss\refactor\transferee\messages.css">
       <DependentUpon>messages.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\messages.min.css">
+    <Content Include="Content\styles\scss\refactor\transferee\messages.min.css">
       <DependentUpon>messages.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\propertyMessages.css">
+    <Content Include="Content\styles\scss\refactor\transferee\propertyMessages.css">
       <DependentUpon>propertyMessages.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\propertyMessages.min.css">
+    <Content Include="Content\styles\scss\refactor\transferee\propertyMessages.min.css">
       <DependentUpon>propertyMessages.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\sideNav.css">
+    <Content Include="Content\styles\scss\refactor\transferee\sideNav.css">
       <DependentUpon>sideNav.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\sideNav.min.css">
+    <Content Include="Content\styles\scss\refactor\transferee\sideNav.min.css">
       <DependentUpon>sideNav.css</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\transferee.css">
+    <Content Include="Content\styles\scss\refactor\transferee\transferee.css">
       <DependentUpon>transferee.scss</DependentUpon>
     </Content>
-    <Content Include="Content\styles\scss\ref_transferee\transferee.min.css">
+    <Content Include="Content\styles\scss\refactor\transferee\transferee.min.css">
       <DependentUpon>transferee.css</DependentUpon>
     </Content>
     <Content Include="Content\themes\base\accordion.css" />
@@ -867,37 +882,37 @@
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
     </None>
-    <Content Include="Content\styles\scss\ref_login.scss" />
-    <Content Include="Content\styles\scss\ref_orders.scss" />
-    <Content Include="Content\styles\scss\ref_forgotpassword.scss" />
+    <Content Include="Content\styles\scss\refactor\login.scss" />
+    <Content Include="Content\styles\scss\refactor\orders.scss" />
+    <Content Include="Content\styles\scss\refactor\forgotpassword.scss" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Content\styles\scss\ref_bookmarklet.scss" />
-    <Content Include="Content\styles\scss\ref_help.scss" />
+    <Content Include="Content\styles\scss\refactor\bookmarklet.scss" />
+    <Content Include="Content\styles\scss\refactor\help.scss" />
     <Content Include="Content\styles\scss\2_resets\reset.scss" />
     <Content Include="Content\styles\scss\4_components\datetimepicker.scss" />
     <Content Include="Content\styles\scss\application.scss" />
     <Content Include="Content\styles\scss\3_elements\body.scss" />
-    <Content Include="Content\styles\scss\ref_transferee.scss" />
-    <Content Include="Content\styles\scss\ref_transferee\dashboard.scss" />
-    <Content Include="Content\styles\scss\ref_transferee\details.scss" />
-    <Content Include="Content\styles\scss\ref_transferee\help.scss" />
-    <Content Include="Content\styles\scss\ref_transferee\history.scss" />
-    <Content Include="Content\styles\scss\ref_transferee\housing.scss" />
-    <Content Include="Content\styles\scss\ref_transferee\intake.scss" />
-    <Content Include="Content\styles\scss\ref_transferee\itinerary.scss" />
-    <Content Include="Content\styles\scss\ref_itineraryPdf.scss" />
-    <Content Include="Content\styles\scss\ref_transferee\messages.scss" />
-    <Content Include="Content\styles\scss\ref_transferee\propertyMessages.scss" />
-    <Content Include="Content\styles\scss\ref_transferee\sideNav.scss" />
-    <Content Include="Content\styles\scss\ref_transferee\transferee.scss" />
-    <Content Include="Content\styles\scss\ref_definitions.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee\dashboard.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee\details.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee\help.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee\history.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee\housing.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee\intake.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee\itinerary.scss" />
+    <Content Include="Content\styles\scss\refactor\itineraryPdf.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee\messages.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee\propertyMessages.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee\sideNav.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee\transferee.scss" />
+    <Content Include="Content\styles\scss\refactor\definitions.scss" />
     <Content Include="Content\styles\scss\4_components\primaryNav.scss" />
     <Content Include="Content\styles\scss\4_components\loadingAnimation.scss" />
     <Content Include="Content\styles\scss\4_components\carousel.scss" />
-    <Content Include="Content\styles\scss\ref_selectedProperty.scss" />
-    <Content Include="Content\styles\scss\ref_transferee\HFPropertiesPDF.scss" />
+    <Content Include="Content\styles\scss\refactor\selectedProperty.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee\HFPropertiesPDF.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
