--- a/Odin/Web.config
+++ b/Odin/Web.config
@@ -32,6 +32,13 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   </system.web>
+  <location path="api">
+    <system.webServer>
+      <httpErrors existingResponse="PassThrough">
+        <clear />
+      </httpErrors>
+    </system.webServer>
+  </location>
   <system.webServer>
     <rewrite>
       <rules>
