--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -420,65 +420,6 @@
     <Compile Include="Views\Helpers\UrlHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Images\bm-loader.gif" />
-    <Content Include="Content\styles\css\application.css" />
-    <Content Include="Content\styles\css\application.min.css">
-      <DependentUpon>application.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\css\animate.css" />
-    <Content Include="Content\styles\css\bootstrap-datetimepicker.css" />
-    <Content Include="Content\styles\css\bootstrap-datetimepicker.min.css">
-      <DependentUpon>bootstrap-datetimepicker.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\css\bootstrap-paper.css" />
-    <Content Include="Content\styles\css\refactor\bookmarklet.css" />
-    <Content Include="Content\styles\css\refactor\bookmarklet.min.css">
-      <DependentUpon>bookmarklet.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\css\refactor\forgotpassword.css" />
-    <Content Include="Content\styles\css\refactor\forgotpassword.min.css">
-      <DependentUpon>forgotpassword.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\css\refactor\help.css" />
-    <Content Include="Content\styles\css\refactor\help.min.css">
-      <DependentUpon>help.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\css\refactor\itineraryPdf.css" />
-    <Content Include="Content\styles\css\refactor\itineraryPdf.min.css">
-      <DependentUpon>itineraryPdf.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\css\refactor\login.css" />
-    <Content Include="Content\styles\css\refactor\login.min.css">
-      <DependentUpon>login.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\css\refactor\orders.css" />
-    <Content Include="Content\styles\css\refactor\orders.min.css">
-      <DependentUpon>orders.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\css\refactor\selectedProperty.css" />
-    <Content Include="Content\styles\css\refactor\selectedProperty.min.css">
-      <DependentUpon>selectedProperty.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\css\refactor\transferee.css" />
-    <Content Include="Content\styles\css\refactor\transferee.min.css">
-      <DependentUpon>transferee.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\css\refactor\transferee\HFPropertiesPDF.css" />
-    <Content Include="Content\styles\css\refactor\transferee\HFPropertiesPDF.min.css">
-      <DependentUpon>HFPropertiesPDF.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\bookmarklet.css">
-      <DependentUpon>bookmarklet.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\bookmarklet.min.css">
-      <DependentUpon>bookmarklet.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\help.css">
-      <DependentUpon>help.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\help.min.css">
-      <DependentUpon>help.css</DependentUpon>
-    </Content>
     <Content Include="Content\DataTables\css\autoFill.bootstrap.css" />
     <Content Include="Content\DataTables\css\autoFill.bootstrap.min.css" />
     <Content Include="Content\DataTables\css\autoFill.bootstrap4.css" />
@@ -636,12 +577,7 @@
     <Content Include="Content\DataTables\images\sort_desc.png" />
     <Content Include="Content\DataTables\images\sort_desc_disabled.png" />
     <Content Include="Content\DataTables\swf\flashExport.swf" />
-    <Content Include="Content\styles\scss\refactor\forgotpassword.css">
-      <DependentUpon>forgotpassword.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\forgotpassword.min.css">
-      <DependentUpon>forgotpassword.css</DependentUpon>
-    </Content>
+    <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\Images\bg_gradient_forgot_password.png" />
     <Content Include="Content\Images\bg_img_3.png" />
     <Content Include="Content\Images\bg_img_w_gradient.png" />
@@ -657,6 +593,7 @@
     <Content Include="Content\Images\forgot_password.jpg" />
     <Content Include="Content\Images\icn_alert_B1.png" />
     <Content Include="Content\Images\icn_alert_circle.png" />
+    <Content Include="Content\Images\icn_attention.png" />
     <Content Include="Content\Images\icn_cal_B1.png" />
     <Content Include="Content\Images\icn_chat_1.png" />
     <Content Include="Content\Images\icn_chat_2.png" />
@@ -692,94 +629,44 @@
     <Content Include="Content\Images\marker-icon-2x.png" />
     <Content Include="Content\Images\marker-icon.png" />
     <Content Include="Content\Images\marker-shadow.png" />
+    <Content Include="Content\Images\pic1.jpg" />
+    <Content Include="Content\Images\pic10.jpg" />
+    <Content Include="Content\Images\pic2.jpg" />
+    <Content Include="Content\Images\pic3.jpg" />
+    <Content Include="Content\Images\pic4.jpg" />
+    <Content Include="Content\Images\pic5.jpg" />
+    <Content Include="Content\Images\pic6.jpg" />
+    <Content Include="Content\Images\pic7.jpg" />
+    <Content Include="Content\Images\pic8.jpg" />
+    <Content Include="Content\Images\pic9.jpg" />
     <Content Include="Content\Images\popout_sml_img.png" />
     <Content Include="Content\Images\task_done.png" />
     <Content Include="Content\Images\task_notDone.png" />
     <Content Include="Content\Images\user-placeholder.png" />
-    <Content Include="Content\styles\scss\refactor\login.css">
-      <DependentUpon>login.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\login.min.css">
-      <DependentUpon>login.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\orders.css">
-      <DependentUpon>orders.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\orders.min.css">
-      <DependentUpon>orders.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\dashboard.css">
-      <DependentUpon>dashboard.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\dashboard.min.css">
-      <DependentUpon>dashboard.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\details.css">
-      <DependentUpon>details.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\details.min.css">
-      <DependentUpon>details.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\help.css">
-      <DependentUpon>help.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\help.min.css">
-      <DependentUpon>help.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\history.css">
-      <DependentUpon>history.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\history.min.css">
-      <DependentUpon>history.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\housing.css">
-      <DependentUpon>housing.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\housing.min.css">
-      <DependentUpon>housing.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\intake.css">
-      <DependentUpon>intake.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\intake.min.css">
-      <DependentUpon>intake.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\itinerary.css">
-      <DependentUpon>itinerary.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\itinerary.min.css">
-      <DependentUpon>itinerary.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\itineraryPdf.css">
-      <DependentUpon>itineraryPdf.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\itineraryPdf.min.css">
-      <DependentUpon>itineraryPdf.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\messages.css">
-      <DependentUpon>messages.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\messages.min.css">
-      <DependentUpon>messages.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\propertyMessages.css">
-      <DependentUpon>propertyMessages.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\propertyMessages.min.css">
-      <DependentUpon>propertyMessages.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\sideNav.css">
-      <DependentUpon>sideNav.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\sideNav.min.css">
-      <DependentUpon>sideNav.css</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\transferee.css">
-      <DependentUpon>transferee.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\styles\scss\refactor\transferee\transferee.min.css">
-      <DependentUpon>transferee.css</DependentUpon>
-    </Content>
+    <None Include="Content\styles\scss\0_libs\animate.scss" />
+    <Content Include="Content\styles\css\application.css" />
+    <Content Include="Content\styles\css\application.min.css" />
+    <None Include="Content\styles\scss\0_libs\bootstrap-datetimepicker.scss" />
+    <None Include="Content\styles\scss\0_libs\bootstrap-paper.scss" />
+    <Content Include="Content\styles\css\refactor\bookmarklet.css" />
+    <Content Include="Content\styles\css\refactor\bookmarklet.min.css" />
+    <Content Include="Content\styles\css\refactor\forgotpassword.css" />
+    <Content Include="Content\styles\css\refactor\forgotpassword.min.css" />
+    <Content Include="Content\styles\css\refactor\help.css" />
+    <Content Include="Content\styles\css\refactor\help.min.css" />
+    <Content Include="Content\styles\css\refactor\itineraryPdf.css" />
+    <Content Include="Content\styles\css\refactor\itineraryPdf.min.css" />
+    <Content Include="Content\styles\css\refactor\login.css" />
+    <Content Include="Content\styles\css\refactor\login.min.css" />
+    <Content Include="Content\styles\css\refactor\orders.css" />
+    <Content Include="Content\styles\css\refactor\orders.min.css" />
+    <Content Include="Content\styles\css\refactor\selectedProperty.css" />
+    <Content Include="Content\styles\css\refactor\selectedProperty.min.css" />
+    <Content Include="Content\styles\css\refactor\transferee.css" />
+    <Content Include="Content\styles\css\refactor\transferee.min.css" />
+    <Content Include="Content\styles\css\refactor\transferee\HFPropertiesPDF.css" />
+    <Content Include="Content\styles\css\refactor\transferee\HFPropertiesPDF.min.css" />
+    <None Include="Content\styles\scss\0_libs\typeahead.scss" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -821,12 +708,12 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
-    <Content Include="Content\styles\css\typeahead.css" />
     <Content Include="Errors\404.html" />
     <Content Include="Errors\error.html" />
     <Content Include="favicon.ico" />
-    <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Content\Site.css" />
     <Content Include="Rotativa\help-wkhtmltoimage.txt" />
     <Content Include="Rotativa\help-wkhtmltopdf.txt" />
     <Content Include="Rotativa\wkhtmltoimage.exe" />
@@ -872,37 +759,40 @@
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
     </None>
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\styles\scss\2_resets\reset.scss" />
+    <Content Include="Content\styles\scss\3_elements\body.scss" />
+    <Content Include="Content\styles\scss\4_components\carousel.scss" />
+    <Content Include="Content\styles\scss\4_components\datetimepicker.scss" />
+    <Content Include="Content\styles\scss\4_components\loadingAnimation.scss" />
+    <Content Include="Content\styles\scss\4_components\primaryNav.scss" />
+    <Content Include="Content\styles\scss\application.scss" />
+    <Content Include="Content\styles\scss\refactor\bookmarklet.scss" />
+    <Content Include="Content\styles\scss\refactor\definitions.scss" />
+    <Content Include="Content\styles\scss\refactor\forgotpassword.scss" />
+    <Content Include="Content\styles\scss\refactor\help.scss" />
+    <Content Include="Content\styles\scss\refactor\itineraryPdf.scss" />
     <Content Include="Content\styles\scss\refactor\login.scss" />
     <Content Include="Content\styles\scss\refactor\orders.scss" />
-    <Content Include="Content\styles\scss\refactor\forgotpassword.scss" />
-    <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="Content\fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Content\styles\scss\refactor\bookmarklet.scss" />
-    <Content Include="Content\styles\scss\refactor\help.scss" />
-    <Content Include="Content\styles\scss\2_resets\reset.scss" />
-    <Content Include="Content\styles\scss\4_components\datetimepicker.scss" />
-    <Content Include="Content\styles\scss\application.scss" />
-    <Content Include="Content\styles\scss\3_elements\body.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee\selectedProperty.scss" />
     <Content Include="Content\styles\scss\refactor\transferee.scss" />
     <Content Include="Content\styles\scss\refactor\transferee\dashboard.scss" />
     <Content Include="Content\styles\scss\refactor\transferee\details.scss" />
     <Content Include="Content\styles\scss\refactor\transferee\help.scss" />
+    <Content Include="Content\styles\scss\refactor\transferee\HFPropertiesPDF.scss" />
     <Content Include="Content\styles\scss\refactor\transferee\history.scss" />
     <Content Include="Content\styles\scss\refactor\transferee\housing.scss" />
     <Content Include="Content\styles\scss\refactor\transferee\intake.scss" />
     <Content Include="Content\styles\scss\refactor\transferee\itinerary.scss" />
-    <Content Include="Content\styles\scss\refactor\itineraryPdf.scss" />
     <Content Include="Content\styles\scss\refactor\transferee\messages.scss" />
     <Content Include="Content\styles\scss\refactor\transferee\propertyMessages.scss" />
     <Content Include="Content\styles\scss\refactor\transferee\sideNav.scss" />
     <Content Include="Content\styles\scss\refactor\transferee\transferee.scss" />
-    <Content Include="Content\styles\scss\refactor\definitions.scss" />
-    <Content Include="Content\styles\scss\4_components\primaryNav.scss" />
-    <Content Include="Content\styles\scss\4_components\loadingAnimation.scss" />
-    <Content Include="Content\styles\scss\4_components\carousel.scss" />
-    <Content Include="Content\styles\scss\refactor\selectedProperty.scss" />
-    <Content Include="Content\styles\scss\refactor\transferee\HFPropertiesPDF.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
@@ -1081,6 +971,9 @@
     <Content Include="Views\Orders\Partials\_Message.cshtml" />
     <Content Include="Views\Error\Error404.cshtml" />
     <Content Include="Views\Error\Index.cshtml" />
+    <Content Include="Views\Orders\Partials\_SelectedProperty.cshtml" />
+    <Content Include="Views\PDF\PDFProperties.cshtml" />
+    <Content Include="Views\PDF\PDFItinerary.cshtml" />
     <None Include="Web.Azure.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
