--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -667,6 +667,10 @@
     <Content Include="Content\styles\css\refactor\transferee\HFPropertiesPDF.css" />
     <Content Include="Content\styles\css\refactor\transferee\HFPropertiesPDF.min.css" />
     <None Include="Content\styles\scss\0_libs\typeahead.scss" />
+    <Content Include="Content\styles\css\refactor\transferee\selectedProperty.css" />
+    <Content Include="Content\styles\css\refactor\transferee\selectedProperty.min.css">
+      <DependentUpon>selectedProperty.css</DependentUpon>
+    </Content>
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
