Running 20tests for now without any wierd behaviour

--- a/Odin.UITests/App.config
+++ b/Odin.UITests/App.config
@@ -53,4 +53,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.diagnostics>
+    <switches>
+      <add name="EqtTraceLevel" value="4" />
+    </switches>
+  </system.diagnostics>
 </configuration>
